--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -13,7 +13,7 @@ name: PR Workflow
 on:
   pull_request:
     branches-ignore:
-      - "master"
+      - 'master'
 
 env:
   CODECOV_UNIQUE_NAME: CODECOV_UNIQUE_NAME-${{ github.run_id }}-${{ github.run_number }}
@@ -30,12 +30,12 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-java@v4
         with:
-          distribution: "zulu" # See 'Supported distributions' for available options
-          java-version: "17.0"
+          distribution: 'zulu' # See 'Supported distributions' for available options
+          java-version: '17.0'
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.22.3"
-          channel: "stable" # or: 'beta', 'dev' or 'master'
+          flutter-version: '3.22.3'
+          channel: 'stable' # or: 'beta', 'dev' or 'master'
       - name: Set default branch.
         run: git remote set-head origin --auto
         shell: bash
