--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -13,7 +13,7 @@ name: PR Workflow
 on:
   pull_request:
     branches-ignore:
-      - "master"
+      - 'master'
 
 env:
   CODECOV_UNIQUE_NAME: CODECOV_UNIQUE_NAME-${{ github.run_id }}-${{ github.run_number }}
@@ -30,12 +30,12 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-java@v4
         with:
-          distribution: "zulu" # See 'Supported distributions' for available options
-          java-version: "17.0"
+          distribution: 'zulu' # See 'Supported distributions' for available options
+          java-version: '17.0'
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.22.3"
-          channel: "stable" # or: 'beta', 'dev' or 'master'
+          flutter-version: '3.22.3'
+          channel: 'stable' # or: 'beta', 'dev' or 'master'
       - name: Set default branch.
         run: git remote set-head origin --auto
         shell: bash
@@ -59,10 +59,10 @@ jobs:
           git checkout -b temp_branch
           git branch
           git stash push -m lock_file pubspec.lock
-          git checkout develop
+          git checkout develop-postgres
           git pull
           git branch
-          git diff --name-only develop..HEAD
+          git diff --name-only develop-postgres..HEAD
           git checkout temp_branch
           pip install GitPython
           python ./.github/workflows/check_ignore.py --repository ${{github.repository}} --merge_branch_name ${{github.head_ref}}
@@ -169,7 +169,7 @@ jobs:
           echo "Error: Too many files (greater than 100) changed in the pull request."
           echo "Possible issues:"
           echo "- Contributor may be merging into an incorrect branch."
-          echo "- Source branch may be incorrect please use develop as source branch."
+          echo "- Source branch may be incorrect please use develop-postgres as source branch."
           exit 1
 
   Flutter-Testing:
