--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ homepage: https://github.com/PalisadoesFoundation/talawa
 
 repository: https://github.com/PalisadoesFoundation/talawa
 environment:
-  sdk: ">=2.17.0 <=3.4.4"
+  sdk: ">=2.17.0 <=3.6.0"
 
 dependencies:
   ############# Remove ###########
@@ -18,7 +18,8 @@ dependencies:
   # analyzer:
   # analyzer_plugin:
   ################################
-
+  app_links: ^6.3.3
+  app_links_platform_interface: ^2.0.2
   auto_size_text: ^3.0.0
   cached_network_image: ^3.4.1
   clock: ^1.1.1
@@ -72,12 +73,12 @@ dependencies:
   syncfusion_flutter_datepicker: ^27.2.5
   timelines: ^0.1.0
   tutorial_coach_mark: ^1.2.12
-  uni_links: ^0.5.1
-  uni_links_platform_interface: ^1.0.0
   url_launcher: ^6.3.1
   vibration: ^2.0.1
   video_player: ^2.9.2
+  video_player_android: ^2.7.16
   visibility_detector: ^0.4.0+2
+  win32: ^5.10.0
 
 dev_dependencies:
   build_runner: ^2.4.11
