--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -286,8 +286,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Validate CodeRabbit.ai Approval
         run: |
-          chmod +x $GITHUB_WORKSPACE/.github/workflows/scripts/validate-coderabbit.sh
-          $GITHUB_WORKSPACE/.github/workflows/scripts/validate-coderabbit.sh
+          chmod +x .github/workflows/scripts/validate-coderabbit.sh
+          .github/workflows/scripts/validate-coderabbit.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
