--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -19,7 +19,7 @@ pluginManagement {
 
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.2"
-    id "com.android.application" version "7.3.0" apply false
+    id "com.android.application" version '7.3.0' apply false
     id "org.jetbrains.kotlin.android" version "1.8.10" apply false
     id("com.google.gms.google-services") version "4.4.1" apply false
 
