--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_reaction_button: ^3.0.0+3
-  flutter_secure_storage: ^4.2.1
+  flutter_secure_storage: ^9.2.2
   flutter_speed_dial: ^7.0.0
   flutter_svg: ^2.0.16
   font_awesome_flutter: ^10.8.0
@@ -51,10 +51,11 @@ dependencies:
   graphql_flutter: ^5.1.2
   hive: ^2.2.3
   http: ^1.2.2
-  image_cropper: ^6.0.0
+  image_cropper: 8.0.0
   image_picker: ^1.1.2
   intl: ^0.19.0
   json_annotation: ^4.7.0
+  mobile_scanner: ^6.0.2
   mockito: ^5.4.4
   network_image_mock: ^2.1.1
   path_provider: ^2.1.5
@@ -62,8 +63,6 @@ dependencies:
   plugin_platform_interface: ^2.1.7
   pointycastle: ^3.9.1
   provider: ^6.1.2
-  # qr_code_scanner: 
-  mobile_scanner: ^6.0.2
   qr_flutter: 4.1.0
   quick_actions: ^1.0.8
   shared_preferences: ^2.3.3
