--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -13,7 +13,7 @@ name: PR Workflow
 on:
   pull_request:
     branches-ignore:
-      - 'master'
+      - "master"
 
 env:
   CODECOV_UNIQUE_NAME: CODECOV_UNIQUE_NAME-${{ github.run_id }}-${{ github.run_number }}
@@ -33,12 +33,12 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/setup-java@v4
         with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: '17.0'
+          distribution: "zulu" # See 'Supported distributions' for available options
+          java-version: "17.0"
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.3'
-          channel: 'stable' # or: 'beta', 'dev' or 'master'
+          flutter-version: "3.22.3"
+          channel: "stable" # or: 'beta', 'dev' or 'master'
       - name: Set default branch.
         run: git remote set-head origin --auto
         shell: bash
@@ -93,7 +93,6 @@ jobs:
           echo "Error: Source and Target Branches are the same. Please ensure they are different."
           echo "Error: Close this PR and try again."          
           exit 1
-
 
   Branch-check:
     if: ${{ github.actor != 'dependabot[bot]' && !contains(github.event.pull_request.labels.*.name, 'ignore-sensitive-files-pr') }}
@@ -204,6 +203,61 @@ jobs:
           path: "./coverage/lcov.info"
           min_coverage: 92.0
 
+  generate-docs:
+    if: github.ref == 'refs/heads/develop-postgres' || (github.event_name == 'pull_request' && github.base_ref == 'develop-postgres')
+    name: Generate documentation
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: "zulu"
+          java-version: "17.0"
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "3.22.3"
+          channel: "stable"
+
+      - name: Set up Dart
+        uses: dart-lang/setup-dart@v1
+        with:
+          sdk: "3.4.4"
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
+
+      - name: Install dependencies
+        run: |
+          pip install markdownify
+
+      - name: Generate docs with dartdoc
+        run: |
+          cd talawa_lint && flutter pub get && cd ..
+          flutter pub get
+          flutter analyze --no-fatal-infos
+          flutter pub global activate dartdoc
+          flutter pub global run dartdoc \
+            --output docs/temp-docs \
+            --exclude 'dart:async,dart:collection,dart:convert,dart:core,dart:developer,dart:io' \
+            --no-generate-docs-for-dependencies \
+            --warnings-as-errors
+
+      - name: Convert HTML to Markdown
+        run: |
+          python .github/workflows/convert_html_to_md.py
+
+      - name: Clean up temporary files
+        run: |
+          rm -rf docs/temp-docs
+
   Android-Build:
     name: Testing build for android
     runs-on: ubuntu-latest
@@ -241,7 +295,7 @@ jobs:
     name: Test Deployment to https://docs-mobile.talawa.io
     runs-on: ubuntu-latest
     needs: [iOS-Build, Android-Build]
-    # Run only if the develop-postgres branch and not dependabot    
+    # Run only if the develop-postgres branch and not dependabot
     if: ${{ github.actor != 'dependabot[bot]' && github.event.pull_request.base.ref == 'develop-postgres' }}
     steps:
       - uses: actions/checkout@v4
@@ -249,7 +303,7 @@ jobs:
         with:
           node-version: 22
           cache: yarn
-          cache-dependency-path: 'docs/'
+          cache-dependency-path: "docs/"
       # Run Docusaurus in the ./docs directory
       - name: Install dependencies
         working-directory: ./docs
