--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -258,9 +258,10 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git config --global user.email "
           git config --global user.name "GitHub Actions"
-          git commit -a -m "Update documentation"
+          git config --global user.email "actions@github.com"
+          git add docs/docs/auto-docs/*
+          git commit -m "Update documentation"
           git push
 
   Android-Build:
