--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -262,9 +262,11 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
+          git fetch origin
+          git checkout ${{ github.ref_name }}
           git add docs/docs/auto-docs/*
           git commit -m "Update documentation"
-          git push
+          git push origin ${{ github.ref_name }}
 
   Android-Build:
     name: Testing build for android
