--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -212,10 +212,14 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: "zulu"
           java-version: "17.0"
@@ -262,11 +266,9 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git fetch origin
-          git checkout ${{ github.ref_name }}
           git add docs/docs/auto-docs/*
           git commit -m "Update documentation"
-          git push origin ${{ github.ref_name }}
+          git push origin HEAD:${{ github.event.pull_request.head.ref }}
 
   Android-Build:
     name: Testing build for android
