--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -13,7 +13,7 @@ name: PUSH Workflow
 on:
   push:
     branches-ignore:
-      - 'master'
+      - "master"
 
     tags:
       - "*"
@@ -22,7 +22,6 @@ env:
   CODECOV_UNIQUE_NAME: CODECOV_UNIQUE_NAME-${{ github.run_id }}-${{ github.run_number }}
 
 jobs:
-  
   Flutter-Codebase-Check:
     if: ${{ github.actor != 'dependabot[bot]' }}
     name: Checking Codebase
@@ -36,12 +35,12 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-java@v4
         with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: '17.0'
+          distribution: "zulu" # See 'Supported distributions' for available options
+          java-version: "17.0"
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.3'
-          channel: 'stable' # or: 'beta', 'dev' or 'master'
+          flutter-version: "3.27.3"
+          channel: "stable" # or: 'beta', 'dev' or 'master'
       - name: Running pub get in talawa_lint
         run: cd talawa_lint && flutter pub get && cd ..
       - name: Running pub get to fetch dependencies
@@ -70,7 +69,6 @@ jobs:
   #     - name: Echo the GitHub context for troubleshooting
   #       run: echo "${{ toJSON(github) }}"
 
-
   Flutter-Testing:
     if: ${{ github.actor != 'dependabot[bot]' }}
     name: Testing codebase
@@ -81,12 +79,12 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: '17.0'
+          distribution: "zulu" # See 'Supported distributions' for available options
+          java-version: "17.0"
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.3'
-          channel: 'stable' # or: 'beta', 'dev' or 'master'
+          flutter-version: "3.27.3"
+          channel: "stable" # or: 'beta', 'dev' or 'master'
       - name: Running pub get in talawa_lint
         run: cd talawa_lint && flutter pub get && cd ..
       - name: Running pub get to fetch dependencies
@@ -99,7 +97,7 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           verbose: true
           fail_ci_if_error: false
-          name: '${{env.CODECOV_UNIQUE_NAME}}'
+          name: "${{env.CODECOV_UNIQUE_NAME}}"
 
   Android-Build-and-Release:
     if: ${{ github.actor != 'dependabot[bot]' }}
@@ -113,12 +111,12 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: '17.0'
+          distribution: "zulu" # See 'Supported distributions' for available options
+          java-version: "17.0"
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.3'
-          channel: 'stable' # or: 'beta', 'dev' or 'master'
+          flutter-version: "3.27.3"
+          channel: "stable" # or: 'beta', 'dev' or 'master'
       - name: Running pub get in talawa_lint
         run: cd talawa_lint && flutter pub get && cd ..
       - name: Running pub get to fetch dependencies
@@ -150,8 +148,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.3'
-          channel: 'stable' # or: 'beta', 'dev' or 'master'
+          flutter-version: "3.27.3"
+          channel: "stable" # or: 'beta', 'dev' or 'master'
           architecture: x64
       - name: Building for ios
         run: flutter build ios --release --no-codesign
@@ -161,7 +159,6 @@ jobs:
       ########################################################
       ## Package the app as an .ipa and create a release ##
       ########################################################
-      
       - name: Releasing for iOS
         run: |
           mkdir Payload
