--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ homepage: https://github.com/PalisadoesFoundation/talawa
 
 repository: https://github.com/PalisadoesFoundation/talawa
 environment:
-  sdk: ">=2.17.0 <=3.4.4"
+  sdk: ">=2.17.0 <=3.6.1"
 
 dependencies:
   ############# Remove ###########
@@ -73,7 +73,7 @@ dependencies:
   stack_trace: ^1.11.1
   syncfusion_flutter_calendar: ^27.2.5
   syncfusion_flutter_datepicker: ^27.2.5
-  timelines: ^0.1.0
+  timelines_plus: ^1.0.6
   tutorial_coach_mark: ^1.2.12
   url_launcher: ^6.3.1
   vibration: ^2.0.1
