--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,12 @@ subprojects {
                 }
             }
         }
+        if (project.plugins.hasPlugin("com.android.application") ||
+                project.plugins.hasPlugin("com.android.library")) {
+            project.android {
+                compileSdkVersion 34
+            }
+        }
     }
     project.buildDir = "${rootProject.buildDir}/${project.name}"
     project.evaluationDependsOn(':app')
