--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,7 @@ dependencies:
   plugin_platform_interface: ^2.1.7
   pointycastle: ^3.9.1
   provider: ^6.1.2
-  qr_code_scanner: ^1.0.0
+  qr_code_scanner_plus: ^2.0.9+1
   qr_flutter: 4.1.0
   quick_actions: ^1.0.8
   shared_preferences: ^2.3.3
