Formatted python files

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -320,4 +320,4 @@ Python-Compliance:
     - name: Run docstring compliance check
       run: |
         source venv/bin/activate
-        python .github/workflows/scripts/check_docstrings.py --directories .github
+        python .github/workflows/scripts/check_docstrings.py --directories .github scripts
