--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Gitignore files
+!.gitignore
+
 # Docusaurus related
 .docusaurus
 
@@ -138,6 +141,14 @@ lib/generated_plugin_registrant.dart
 # Created by https://www.gitignore.io/api/python
 # Edit at https://www.gitignore.io/?templates=python
 ###############################################################################
+
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
