--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -275,7 +275,7 @@ jobs:
   Python-Compliance:
     name: Check Python Code Style
     runs-on: ubuntu-latest
-    needs: [Code-Quality-Checks]
+    needs: [Flutter-Codebase-Check]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
