--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -205,7 +205,7 @@ jobs:
   Android-Build:
     name: Testing build for android
     runs-on: ubuntu-latest
-    needs: [Flutter-Codebase-Check, Flutter-Testing]
+    needs: [Flutter-Testing]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -224,7 +224,7 @@ jobs:
   iOS-Build:
     name: Testing build for iOS
     runs-on: macos-latest
-    needs: [Flutter-Codebase-Check, Flutter-Testing]
+    needs: [Flutter-Testing]
     steps:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
@@ -275,7 +275,6 @@ jobs:
   Python-Compliance:
     name: Check Python Code Style
     runs-on: ubuntu-latest
-    needs: [Flutter-Codebase-Check]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
