trying to run workflows

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -135,7 +135,6 @@ jobs:
           for pattern in $SENSITIVE_FILES; do
             FILES=$(git diff --name-only --diff-filter=ACMRD $BASE_SHA ${{ github.event.pull_request.head.sha }} | grep -E "$pattern" || true)
 
-
             if [ ! -z "$FILES" ]; then
               CHANGED_UNAUTH_FILES="$CHANGED_UNAUTH_FILES $FILES"
             fi
@@ -148,8 +147,10 @@ jobs:
           # Check if any unauthorized files changed
           if [ ! -z "$CHANGED_UNAUTH_FILES" ]; then
             echo "any_changed=true" >> $GITHUB_OUTPUT
+            echo "any_deleted=true" >> $GITHUB_OUTPUT
           else
             echo "any_changed=false" >> $GITHUB_OUTPUT
+            echo "any_deleted=false" >> $GITHUB_OUTPUT
           fi
        
           
@@ -174,27 +175,16 @@ jobs:
         with:
           fetch-depth: 0 #Fetch all history for all branches and tags
 
-
-      - name: Changed Files
-        id: changed-files
-        run: | 
-          echo "Base SHA: ${{ github.event.pull_request.base.sha }}"
-          echo "Head SHA: ${{ github.event.pull_request.head.sha }}"
-
       - name: Get changed files
         id: changed-files
         run: |
           #Get the base branch ref
           BASE_SHA=$(git merge-base ${{github.event.pull_request.base.sha}} ${{github.event.pull_request.head.sha}})
 
-          if [ -z "$BASE_SHA" ]; then
-            echo "Error: BASE_SHA is empty. Git merge-base failed."
-            exit 1
-          fi
-
           #Get all changed files
           ALL_CHANGED_FILES=$(git diff --name-only --diff-filter=ACMRT $BASE_SHA ${{github.event.pull_request.head.sha}} | tr '\n' ' ')
-          echo "all_changed_files=${ALL_CHANGED_FILES}" >> $GITHUB_OUTPUT
+                      echo "all_changed_files=${ALL_CHANGED_FILES}" >>
+          $GITHUB_OUTPUT
 
       - name: Echo number of changed files
         env:
