changes android sdk to 35 and generate new hive genearted files

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -86,3 +86,4 @@ linter:
     unreachable_from_main: false
     implicit_call_tearoffs: false
     dangling_library_doc_comments: false
+    unintended_html_in_doc_comment: false
