Enhancing Data Storage: Hive File Updates for User Info, Org info and Android SDK Upgrade (#2796)
* changes android sdk to 35 and generate new hive genearted files

* changes android sdk to 35 and generate new hive genearted files

* changes android sdk to 35 and generate new hive genearted files

* updated test

* updated test

* updated test

* update dart sdk

* update dart sdk

* update dart sdk

* update dart sdk

* update dart sdk

* update dart sdk

* handled conflicts

* handled conflicts

* workflow

* test

* push.yml update

* updated sdk and solve hive problem

* Update .github/workflows/push.yml

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* Update .github/workflows/pull-request.yml

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

---------

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -58,6 +58,10 @@ jobs:
         run: chmod +x ./.github/workflows/scripts/check_ignore.py
       - name: Run check_ignore
         run: |
+          if [[ -n "$(git status --porcelain pubspec.lock)" ]]; then
+            echo "Uncommitted changes detected in pubspec.lock. Stashing just that file..."
+            git stash push -u -- "pubspec.lock"
+          fi
           git branch
           git checkout -b temp_branch
           git branch
@@ -68,6 +72,10 @@ jobs:
           git checkout temp_branch
           pip install GitPython
           python ./.github/workflows/scripts/check_ignore.py --repository ${{github.repository}} --merge_branch_name ${{github.head_ref}}
+          if git stash list | grep -q "stash@{0}"; then
+            echo "Restoring stashed changes..."
+            git stash pop
+          fi
       - name: Compare translation files
         run: |
           chmod +x .github/workflows/scripts/compare_translations.py
