fix: created an android emulator

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -259,7 +259,7 @@ jobs:
 
   Integration-Testing:
     name: Running Integration Tests
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     env:
       API_URL: http://127.0.0.1:4000/graphql
     steps:
@@ -326,6 +326,12 @@ jobs:
 
       - name: Checkout Flutter App Repository
         uses: actions/checkout@v4
+
+      - name: Enable KVM
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
       
       - name: Setup Java for Flutter
         uses: actions/setup-java@v4
@@ -333,10 +339,6 @@ jobs:
           distribution: "zulu"
           java-version: "17.0"
 
-      - uses: futureware-tech/simulator-action@v3
-        with:
-          model: 'iPhone 14'
-      
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -352,8 +354,23 @@ jobs:
       - name: Update API_URL in .env for integration tests
         run: echo "API_URL=http://127.0.0.1:4000/graphql" > .env
       
-      - name: Run Integration Tests
-        run: flutter test integration_test/app_test.dart
+      - name: Run Flutter Tests on Android Emulator
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 29
+          target: default
+          arch: x86_64
+          profile: Nexus 6
+          cores: 2
+          sdcard-path-or-size: 100M
+          avd-name: test
+          force-avd-creation: false
+          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          disable-animations: true
+          script: |
+            echo "Starting emulator tests..."
+            flutter test integration_test/app_test.dart --verbose
+            echo "Emulator tests completed"
 
   Android-Build:
     name: Testing build for android
